--- a/feladat.html
+++ b/feladat.html
@@ -467,3 +467,217 @@ Germany_BerlinCardsPin kihagyva (100%), <br />
 Germany_Pretzel kihagyva (100%), <br />
 Germany_AdventurePortal2, not updated, 0.0<br />
 Germany_BerlinVoidMapleChess, <b>updated</b>, 308, <a href="https://www.munzee.com/map/u336tzs18/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinVoidMapleChess.json" target="_blank">json</a><br />
+Germany_SweetHeart kihagyva (100%), <br />
+Germany_WittenauerMischMasch, not updated, 0.0<br />
+Germany_BerlinBYOG2020 kihagyva (100%), <br />
+Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
+Germany_GermanHeart kihagyva (100%), <br />
+Australia_RUMportal kihagyva (100%), <br />
+Australia_MiniPortal1 kihagyva (100%), <br />
+Denmark_MiniPortal2 kihagyva (100%), <br />
+Germany_MattPin kihagyva (100%), <br />
+Germany_CrossbowShield kihagyva (100%), <br />
+Germany_FlatLouPin kihagyva (100%), <br />
+Germany_FlatHammockPin kihagyva (100%), <br />
+Germany_FlatRobPin kihagyva (100%), <br />
+Germany_CrossbowPin kihagyva (100%), <br />
+Germany_MysteryPin kihagyva (100%), <br />
+Germany_GreeniePin kihagyva (100%), <br />
+Germany_SperenbergTeddy kihagyva (100%), <br />
+Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
+Germany_ErnieInVolksdorf, not updated, 0.0<br />
+Germany_Quietscheentchen kihagyva (100%), <br />
+Germany_Hammaburg, not updated, 0.0<br />
+Germany_FCStPauli, not updated, 0.6400000000000006<br />
+Germany_YinYangNeustadt, not updated, 0.0<br />
+Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
+Denmark_SoparkenMaribo kihagyva (100%), <br />
+Denmark_NonneMaribo kihagyva (100%), <br />
+Denmark_ZeecretSundby kihagyva (100%), <br />
+Denmark_FjerNykobing, not updated, 0.10999999999999943<br />
+Denmark_SpejdernesLejr2022, not updated, 0.0<br />
+Denmark_JuletraeIViby kihagyva (100%), <br />
+Denmark_ZeecretViby kihagyva (100%), <br />
+Denmark_NVGogglesSoro kihagyva (100%), <br />
+Denmark_ZeecretFrederiksberg kihagyva (100%), <br />
+Denmark_DetSpogerIHaslev kihagyva (100%), <br />
+Denmark_ZeecretFensmark kihagyva (100%), <br />
+Denmark_FlatFensmark kihagyva (100%), <br />
+Denmark_ZeecretAppenaes kihagyva (100%), <br />
+Denmark_ZeecretHilleroed kihagyva (100%), <br />
+Denmark_FlatSquare kihagyva (100%), <br />
+USA_HotelEvo kihagyva (100%), <br />
+USA_Emoji, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.3200000000000003<br />
+USA_DesMoinesGreetingCards, not updated, 0.0<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.0<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy kihagyva (100%), <br />
+USA_CatapultPit kihagyva (100%), <br />
+USA_Crossbow, not updated, 0.0<br />
+USA_BowlingBash kihagyva (100%), <br />
+USA_AtlanticDuck, not updated, 0.0<br />
+USA_80sCube kihagyva (100%), <br />
+USA_CRSubmarine kihagyva (100%), <br />
+USA_IowaVeteransCemetery, not updated, 0.0<br />
+USA_SchildbergsDuckWalk kihagyva (100%), <br />
+USA_CRVegetable kihagyva (100%), <br />
+USA_CedarRapidsBarnyard kihagyva (100%), <br />
+UnitedKingdom_JanuaryGarden2022 kihagyva (100%), <br />
+USA_CRFarmersField kihagyva (100%), <br />
+USA_CRMuscleCar kihagyva (100%), <br />
+USA_JacobLLoosePark kihagyva (100%), <br />
+USA_CRSafari kihagyva (100%), <br />
+USA_CRApril kihagyva (100%), <br />
+USA_PicassoRob kihagyva (100%), <br />
+USA_CRFlatMattLovesBaseball kihagyva (100%), <br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+USA_WestDesMoinesPacMan, not updated, 0.0<br />
+USA_CRFeather kihagyva (100%), <br />
+USA_BlackCat kihagyva (100%), <br />
+USA_CRJonesParkBirthday7 kihagyva (100%), <br />
+USA_NoelridgeMystery kihagyva (100%), <br />
+USA_WestDesMoinesStrawberry, not updated, 0.0<br />
+USA_WestDesMoinesShark, not updated, 0.0<br />
+USA_AltoonaEvos, not updated, 0.0<br />
+USA_DSMHalloweenWitch, not updated, 0.0<br />
+USA_CRFrankenstein, not updated, 0.0<br />
+USA_ThomasParkFlats kihagyva (100%), <br />
+USA_IowaGoldfinch kihagyva (100%), <br />
+USA_Minion kihagyva (100%), <br />
+USA_FarmingtonTiger, not updated, 0.0<br />
+USA_CedarRapidsPumpkin kihagyva (100%), <br />
+USA_PuppyPlayPen, not updated, 0.0<br />
+USA_Burger kihagyva (100%), <br />
+USA_Pizza kihagyva (100%), <br />
+USA_StormtrooperSavage kihagyva (100%), <br />
+USA_Snoopy kihagyva (100%), <br />
+USA_JordanJ kihagyva (100%), <br />
+USA_Tulip kihagyva (100%), <br />
+USA_MOAMNCrossbow kihagyva (100%), <br />
+USA_MinnesotaM kihagyva (100%), <br />
+USA_HiawathaCrossbows kihagyva (100%), <br />
+USA_SuperBowlLII kihagyva (100%), <br />
+USA_EaglesVPatriots kihagyva (100%), <br />
+USA_StMarysBattlegroundWeapon kihagyva (100%), <br />
+USA_LRTSnowflake kihagyva (100%), <br />
+USA_HeartCrossbows kihagyva (100%), <br />
+USA_ComoParkShamrockWhite kihagyva (100%), <br />
+USA_ComoParkShamrockBlue, not updated, 0.0<br />
+USA_StPaulShamrock kihagyva (100%), <br />
+USA_BirthdayClown kihagyva (100%), <br />
+USA_LongLakeButterflies kihagyva (100%), <br />
+USA_FleurDeLis, not updated, 0.0<br />
+USA_HutchinsonSnowflake kihagyva (100%), <br />
+USA_RochestersCornWaterTower, not updated, 0.0<br />
+USA_DuluthAnchor kihagyva (100%), <br />
+USA_SunFlake, not updated, 0.0<br />
+USA_PrescottCardinals, not updated, 0.0<br />
+Denmark_AgricultureFieldInHilleroed, not updated, 0.0<br />
+Denmark_AnimalFarmHilleroed, not updated, 0.0<br />
+Denmark_EvolutionparkInRoskilde, not updated, 0.0<br />
+Denmark_ChristmastreeInHilleroed kihagyva (100%), <br />
+Denmark_Drikkehorn kihagyva (100%), <br />
+Denmark_FCMidtjylland, not updated, 0.0<br />
+Denmark_RandersRegnskov, not updated, 0.0<br />
+Denmark_RandersSnowy, not updated, 0.0<br />
+Denmark_SonicRanders, not updated, 0.0<br />
+Denmark_FlatHammel kihagyva (100%), <br />
+Denmark_GrenaaAmethyst kihagyva (100%), <br />
+Denmark_GrenaaBigAmethyst kihagyva (100%), <br />
+Denmark_GrenaaFerry kihagyva (100%), <br />
+Denmark_GrenaaSapphireAndAmethyst kihagyva (100%), <br />
+Denmark_HeartOfValentine kihagyva (100%), <br />
+Denmark_Evolution2019Hammel, not updated, 0.0<br />
+Denmark_NextStopTilst kihagyva (100%), <br />
+Denmark_SilkeborgMario kihagyva (100%), <br />
+Denmark_TranbjergButterfly kihagyva (100%), <br />
+Denmark_TrueForestFish kihagyva (100%), <br />
+Denmark_TrueForestSurprise kihagyva (100%), <br />
+Denmark_AppleInAarhus kihagyva (100%), <br />
+Denmark_GardenOfJewels kihagyva (100%), <br />
+Denmark_OnyxCitrineParkInHammel kihagyva (100%), <br />
+Denmark_SilkeborgCoatOfArms kihagyva (100%), <br />
+Denmark_SilkeborgRainbowUnicorn kihagyva (100%), <br />
+Denmark_SilkeborgHexagon kihagyva (100%), <br />
+Denmark_SilkeborgOwl kihagyva (100%), <br />
+Denmark_SilkeborgNightOwl kihagyva (100%), <br />
+Denmark_GrenaaHeart2022 kihagyva (100%), <br />
+UnitedKingdom_PegasusLure, not updated, 0.0<br />
+USA_ValentineHeartCapeCanaveral kihagyva (100%), <br />
+UnitedKingdom_RIPQueenElizabethIICrown kihagyva (100%), <br />
+UnitedKingdom_ChallockChimp, not updated, 0.0<br />
+UnitedKingdom_LittleBurtonApple, not updated, 0.0<br />
+UnitedKingdom_AshfordKentClanWars, not updated, 0.0<br />
+UnitedKingdom_AshfordVariety kihagyva (100%), <br />
+UnitedKingdom_ShoeburyVirtuals, not updated, 0.0<br />
+UnitedKingdom_SCGVirtualField, not updated, 0.0<br />
+UnitedKingdom_KentQueensCrown kihagyva (100%), <br />
+UnitedKingdom_EvoPlusGarden kihagyva (100%), <br />
+UnitedKingdom_Nipper kihagyva (100%), <br />
+UnitedKingdom_HayesRainbow kihagyva (100%), <br />
+UnitedKingdom_UnionJack kihagyva (100%), <br />
+UnitedKingdom_SunnyRainbow kihagyva (100%), <br />
+UnitedKingdom_MaattmoosMoo kihagyva (100%), <br />
+UnitedKingdom_LoveLanePatchwork, not updated, 0.0<br />
+UnitedKingdom_FavershamCrossbow kihagyva (100%), <br />
+UnitedKingdom_RainbowHeart kihagyva (100%), <br />
+UnitedKingdom_CanterburyVictoriaPark kihagyva (100%), <br />
+UnitedKingdom_MrKnowItOwl, not updated, 0.0<br />
+UnitedKingdom_ChristmasGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_InMemoryOfPam kihagyva (100%), <br />
+UnitedKingdom_LittleLotties1st, not updated, 0.0<br />
+UnitedKingdom_SuperpeggysVirtual, not updated, 0.0<br />
+UnitedKingdom_HelpForHingham, not updated, 0.0<br />
+UnitedKingdom_NotRudolph, not updated, 0.0<br />
+UnitedKingdom_MadHatter, not updated, 0.0<br />
+UnitedKingdom_NVG kihagyva (100%), <br />
+UnitedKingdom_EveryColour kihagyva (100%), <br />
+UnitedKingdom_NaomisSloth kihagyva (100%), <br />
+UnitedKingdom_VirtualJewels, not updated, 0.0<br />
+UnitedKingdom_WorsteadForNorkie kihagyva (100%), <br />
+UnitedKingdom_PercyThePenguinVisitsTheSeaside kihagyva (100%), <br />
+UnitedKingdom_SeasideIcesInCromer, not updated, 0.0<br />
+UnitedKingdom_RobinRedbreast, not updated, 0.0<br />
+UnitedKingdom_SheringhamJewelSquare, not updated, 0.0<br />
+UnitedKingdom_IceCreamCone, not updated, 0.0<br />
+UnitedKingdom_VirtualLove, not updated, 0.0<br />
+UnitedKingdom_ShireHorseSanctuary kihagyva (100%), <br />
+UnitedKingdom_ChalkReefScubaDiver kihagyva (100%), <br />
+UnitedKingdom_CromersGingerbreadMan kihagyva (100%), <br />
+UnitedKingdom_CromerEnglandSnowman kihagyva (100%), <br />
+UnitedKingdom_HMSVictory, not updated, 0.0<br />
+UnitedKingdom_RetroBunzee kihagyva (100%), <br />
+UnitedKingdom_DenverWindmill kihagyva (100%), <br />
+Canada_AdventureGardenForBluestreek kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
+----felhasználók<br />
+123xilef_all, <b>updated</b>, <a href="https://www.munzee.com/map/u33de1r9d/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_all.json" target="_blank">json</a><br />
+123xilef_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u336tzs18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_empty.json" target="_blank">json</a><br />
+Norbee97_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw30kw9/15.000" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_all.json" target="_blank">json</a><br />
+Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.01 01:58:14<br />
+összesen 2885<br />
