--- a/feladat.html
+++ b/feladat.html
@@ -38,3 +38,118 @@ Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
 USA_StAugustinePirateShip, <b>updated</b>, 309, <a href="https://www.munzee.com/map/djq1y8v3x/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StAugustinePirateShip.json" target="_blank">json</a><br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.7246376811594217<br />
+USA_Turtle, not updated, 0.6172839506172849<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
+Lithuania_KaunasBasketball, not updated, 0.29999999999999716<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.9722222222222143<br />
+Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.6999999999999886<br />
+Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.2799999999999976<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
+Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
+USA_FortMyersAlligator, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Hungary_CsepelObol, not updated, 0.0<br />
+Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
+Czechia_KMZNAK, not updated, 0.1599999999999966<br />
+Luxembourg_LuxembourgFlag, not updated, 0.0<br />
+USA_MarioFireballVoid, not updated, 0.0<br />
+USA_SpyGoggles, not updated, 0.0<br />
+Hungary_Farkas-erdo, not updated, 0.16999999999999993<br />
+Hungary_CastleOfDiosgyor, not updated, 0.0<br />
+Denmark_GhostInHilleroed, not updated, 0.0<br />
+USA_CherryBomb kihagyva (100%), <br />
+USA_Stormtrooper kihagyva (100%), <br />
+Australia_BeeFlowers kihagyva (100%), <br />
+Australia_BeeSanta kihagyva (100%), <br />
+Australia_BuzzzBee kihagyva (100%), <br />
+Australia_LaidleyBeeHive kihagyva (100%), <br />
+Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
+Canada_MaillardvilleChristmas kihagyva (100%), <br />
+Finland_KokkolanKurpitsainen kihagyva (100%), <br />
+Hungary_10thBirthdayCake kihagyva (100%), <br />
+Hungary_BlackCat kihagyva (100%), <br />
+Hungary_ChainBridge kihagyva (100%), <br />
+Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
+Hungary_DuckAtBalaton kihagyva (100%), <br />
+Hungary_FlagsInBudapest, not updated, 0.0<br />
+Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
+Hungary_FrogInBudaors kihagyva (100%), <br />
+Hungary_SantasSledge kihagyva (100%), <br />
+Hungary_SnoopyInBudapest kihagyva (100%), <br />
+Hungary_SteamshipOnDanube kihagyva (100%), <br />
+Hungary_SurpriseCar kihagyva (100%), <br />
+Hungary_SurpriseInBudapest kihagyva (100%), <br />
+Hungary_SwansByTheDanube kihagyva (100%), <br />
+Lithuania_Akmenynas kihagyva (100%), <br />
+Lithuania_OZOParkas kihagyva (100%), <br />
+Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
+Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
+Netherlands_EVO2Kerkrade kihagyva (100%), <br />
+Slovakia_Alien kihagyva (100%), <br />
+Sweden_SwedishFlag kihagyva (100%), <br />
+UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
+UnitedKingdom_GriffMemorial kihagyva (100%), <br />
+UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
+UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
+USA_BurlingtonFlamingo kihagyva (100%), <br />
+USA_CandyCaneZee kihagyva (100%), <br />
+USA_ChristmasTree kihagyva (100%), <br />
+USA_GingerbreadMan kihagyva (100%), <br />
+USA_GumballMachine kihagyva (100%), <br />
+USA_HOwlOween kihagyva (100%), <br />
+USA_LakelandCandyCorn kihagyva (100%), <br />
+USA_MamaTsLadybug kihagyva (100%), <br />
+USA_MermaidTail kihagyva (100%), <br />
+USA_OctoberPumpkin kihagyva (100%), <br />
+USA_SantaSirPrize, not updated, 0.0<br />
+USA_Snowman kihagyva (100%), <br />
+USA_SprinkleCupcake kihagyva (100%), <br />
+USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
+USA_WestportSpecials kihagyva (100%), <br />
+Netherlands_TheWall kihagyva (100%), <br />
+Netherlands_PompebledPalet kihagyva (100%), <br />
+Netherlands_GroeneStroom kihagyva (100%), <br />
+Netherlands_Klomp kihagyva (100%), <br />
+Netherlands_EvoAppleEch kihagyva (100%), <br />
+Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
+USA_GreenvilleCloverLeaf kihagyva (100%), <br />
+Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_EmeraldInHilleroed kihagyva (100%), <br />
+Finland_HalkokarinEvovene, not updated, 1.0<br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle kihagyva (100%), <br />
+USA_LightningBoltInSapphire kihagyva (100%), <br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, <b>updated</b>, 830, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
