--- a/feladat.html
+++ b/feladat.html
@@ -176,3 +176,51 @@ Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
 Germany_BerlinMunzeePin, <b>updated</b>, 785, <a href="https://www.munzee.com/map/u336wu956/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinMunzeePin.json" target="_blank">json</a><br />
+Germany_DiamantBerlin, not updated, 0.0<br />
+Germany_BerlinBear, not updated, 0.0<br />
+Germany_HonowWappen, not updated, 0.3355704697986539<br />
+Canada_GatineauEvo, not updated, 0.36999999999999744<br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
+USA_ChristmasWreath kihagyva (100%), <br />
+USA_WinterOlympics2018 kihagyva (100%), <br />
+USA_R2D2 kihagyva (100%), <br />
+USA_TwinCitiesSnowman kihagyva (100%), <br />
+USA_SimpsonsDonut kihagyva (100%), <br />
+USA_AppleValleyEagle, not updated, 0.0<br />
+USA_DorothyToTheEmerald kihagyva (100%), <br />
+USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
+Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
+Hungary_GyorVgFarm kihagyva (100%), <br />
+Hungary_GyoriVasutiKert, not updated, 0.0<br />
+Hungary_Colors kihagyva (100%), <br />
+Hungary_TocoskertsArrows2 kihagyva (100%), <br />
+Hungary_TocoskertsArrows3, not updated, 0.0<br />
+Hungary_60Color kihagyva (100%), <br />
+Hungary_Cata-Joy kihagyva (100%), <br />
+Hungary_FlatDebrecen, not updated, -1.0<br />
+Hungary_Debrecen2202, <b>updated</b>, 128, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen2202.json" target="_blank">json</a><br />
